// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-props-usage adjust-lines.any 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/adjust-lines.any",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 25,
                  "line": 0,
                },
                "start": Object {
                  "column": 20,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 52,
          "line": 5,
        },
        "start": Object {
          "column": 23,
          "line": 5,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
}

export const myStory = props => (
  <Story
   {...props}
  />
);
",
}
`;

exports[`csf-props-usage age-and-name.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/age-and-name.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 32,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ name, age }) => (
  <h2>{\`Hello, my name is \${name}, and I am \\\\\${age} years old.\`}</h2>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ name, age }) => (
  <h2>{\`Hello, my name is \${name}, and I am \\\\\${age} years old.\`}</h2>
);
",
}
`;

exports[`csf-props-usage empty-body.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/empty-body.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 14,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 39,
          "line": 4,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ name }) => name",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ name }) => name;
",
}
`;

exports[`csf-props-usage expression.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/expression.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "selectProp": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "value",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 30,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 25,
                        "line": 1,
                      },
                    },
                    "name": "value",
                  },
                  "shorthand": true,
                },
              ],
              "value": "value",
            },
          ],
        },
      ],
      "id": "selectProp",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 26,
          "line": 5,
        },
      },
      "name": "selectProp",
      "source": "({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const selectProp = ({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
);
",
}
`;

exports[`csf-props-usage multiple-usage.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/multiple-usage.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 31,
                      "line": 2,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 2,
                    },
                  },
                  "shorthand": undefined,
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 10,
        },
        "start": Object {
          "column": 23,
          "line": 5,
        },
      },
      "name": "myStory",
      "source": "({ age }) => (
  <>
    <Story name={name} age={age} />
    <Age value={age} />
  </>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const myStory = ({ age }) => (
  <>
    <Story name={name} age={age} />
    <Age value={age} />
  </>
);
",
}
`;

exports[`csf-props-usage nested-arguments.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/nested-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 45,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "height",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "height",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 17,
                  "line": 0,
                },
                "start": Object {
                  "column": 11,
                  "line": 0,
                },
              },
              "name": "weight",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 37,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 31,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "weight",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 43,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "style",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 34,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 0,
                    },
                  },
                  "name": "border",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 53,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 47,
                          "line": 1,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "border",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 41,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 36,
                      "line": 0,
                    },
                  },
                  "name": "color",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 67,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 62,
                          "line": 1,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "color",
                },
              ],
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ height, weight, style: { border, color } }) => (
  <div height={height} weight={weight} border={border} color={color} />
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ height, weight, style: { border, color } }) => (
  <div height={height} weight={weight} border={border} color={color} />
);
",
}
`;

exports[`csf-props-usage props.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/props.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 25,
                  "line": 0,
                },
                "start": Object {
                  "column": 20,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 52,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = props => <Story {...props} />;
",
}
`;

exports[`csf-props-usage select-prop.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/select-prop.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 17,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "showOptional",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 7,
                      "line": 4,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "showOptional",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 12,
        },
        "start": Object {
          "column": 21,
          "line": 5,
        },
      },
      "name": "story",
      "source": "({ showOptional }) => {
  return (
    <>
      <div>I must be here</div>
      {showOptional === 'yes' ? <div>Optional, I can disappear</div> : null}
    </>
  );
}",
    },
  },
  "transformed": "import React from 'react';
export default {
  title: 'Story',
};
export const story = ({ showOptional }) => {
  return (
    <>
      <div>I must be here</div>
      {showOptional === 'yes' ? <div>Optional, I can disappear</div> : null}
    </>
  );
};
",
}
`;

exports[`csf-props-usage shorthand.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/shorthand.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "value",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 30,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 25,
                        "line": 1,
                      },
                    },
                    "name": "value",
                  },
                  "shorthand": true,
                },
              ],
              "value": "value",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 21,
          "line": 5,
        },
      },
      "name": "story",
      "source": "({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const story = ({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
);
",
}
`;

exports[`csf-props-usage string-template.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/string-template.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "text",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 7,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 0,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 7,
                        "line": 0,
                      },
                      "start": Object {
                        "column": 3,
                        "line": 0,
                      },
                    },
                    "name": "text",
                  },
                  "shorthand": true,
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "text",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 46,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ text }) => \`\${text}\`",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ text }) => \`\${text}\`;
",
}
`;

exports[`csf-props-usage three-levels-alias.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/three-levels-alias.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 16,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 0,
                    },
                  },
                  "name": "first",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 23,
                          "line": 2,
                        },
                        "start": Object {
                          "column": 18,
                          "line": 2,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 22,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 0,
                    },
                  },
                  "name": "last",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 35,
                          "line": 2,
                        },
                        "start": Object {
                          "column": 31,
                          "line": 2,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 29,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 9,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name: { first, last }, age }) => (
  <>
    <Story first={first} last={last} />
    <Age value={age} />
  </>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name: { first, last }, age }) => (
  <>
    <Story first={first} last={last} />
    <Age value={age} />
  </>
);
",
}
`;

exports[`csf-props-usage two-arguments.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/two-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 36,
                  "line": 0,
                },
                "start": Object {
                  "column": 31,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 63,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "(props, context) => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = (props, context) => <Story {...props} />;
",
}
`;

exports[`csf-props-usage two-levels-alias.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/two-levels-alias.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 31,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name: MyName, age }) => (
  <Story name={MyName} age={age} />
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name: MyName, age }) => (
  <Story name={MyName} age={age} />
);
",
}
`;

exports[`csf-props-usage two-levels-sub-arguments.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/two-levels-sub-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 36,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 32,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 46,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 43,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 73,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name, age }) => <Story name={name} age={age} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name, age }) => <Story name={name} age={age} />;
",
}
`;
